--- a/card_scan.html
+++ b/card_scan.html
@@ -14,9 +14,7 @@
     button.active { background: #4CAF50; color: white; }
     #opencv-status { font-weight: bold; margin: 10px; }
   </style>
-  <!-- deferで呼ぶと関数定義後にロード -->
   <script defer src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady()"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
 </head>
 <body>
   <h1>リアルタイムカード枠検出（改善案切り替え版）</h1>
@@ -26,7 +24,6 @@
   <div>
     <button id="mode1-button" class="active">改善案1</button>
     <button id="mode2-button">改善案2</button>
-    <button id="mode3-button">改善案3</button>
   </div>
   <div>
     <button id="trim-button">トリミング</button>
@@ -38,23 +35,17 @@
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvasOutput');
     const statusEl = document.getElementById('opencv-status');
-    const textOutput = document.getElementById('text-output');
-    const trimBtn = document.getElementById('trim-button');
-    const ocrBtn = document.getElementById('ocr-button');
     let currentMode = 1;
     let streaming = false;
 
-    // モード切り替えボタン
-    ['mode1','mode2','mode3'].forEach((id, idx) => {
-      document.getElementById(`${id}-button`)
-        .addEventListener('click', () => setMode(idx+1));
+    ['mode1', 'mode2'].forEach((id, idx) => {
+      document.getElementById(`${id}-button`).addEventListener('click', () => setMode(idx + 1));
     });
 
     function setMode(m) {
       currentMode = m;
-      ['mode1','mode2','mode3'].forEach((id, idx) => {
-        document.getElementById(`${id}-button`)
-          .classList.toggle('active', currentMode === idx+1);
+      ['mode1', 'mode2'].forEach((id, idx) => {
+        document.getElementById(`${id}-button`).classList.toggle('active', currentMode === idx + 1);
       });
       statusEl.innerText = `🔄 改善案${m} 適用中...`;
     }
@@ -81,16 +72,14 @@
         });
     }
 
-    // OpenCV Mat変数（再利用）
-    let cap, src, dst, gray, blurred, edges, hsv, mask, kernel, contours, hierarchy;
+    let cap, src, dst, gray, blurred, edges, kernel, contours, hierarchy;
 
     function initCv() {
       cap = new cv.VideoCapture(video);
       src = new cv.Mat(video.videoHeight, video.videoWidth, cv.CV_8UC4);
       dst = new cv.Mat(video.videoHeight, video.videoWidth, cv.CV_8UC4);
       gray = new cv.Mat(); blurred = new cv.Mat(); edges = new cv.Mat();
-      hsv = new cv.Mat(); mask = new cv.Mat();
-      kernel = cv.Mat.ones(5,5,cv.CV_8U);
+      kernel = cv.Mat.ones(5, 5, cv.CV_8U);
       contours = new cv.MatVector(); hierarchy = new cv.Mat();
       requestAnimationFrame(processVideo);
     }
@@ -100,10 +89,9 @@
       cap.read(src);
       src.copyTo(dst);
 
-      switch(currentMode) {
+      switch (currentMode) {
         case 1: mode1(); break;
         case 2: mode2(); break;
-        case 3: mode3(); break;
       }
 
       cv.imshow(canvas, dst);
@@ -118,38 +106,62 @@
 
     function mode2() {
       cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY);
-      cv.GaussianBlur(gray, blurred, new cv.Size(5,5), 0);
+      cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
       cv.dilate(blurred, blurred, kernel);
       cv.erode(blurred, blurred, kernel);
       cv.Canny(blurred, edges, 50, 150);
-      drawContours(edges);
+      mergeAndDrawContours(edges);
     }
 
-    function mode3() {
-      cv.cvtColor(src, hsv, cv.COLOR_RGBA2HSV);
-      cv.inRange(hsv, new cv.Scalar(0,50,50), new cv.Scalar(10,255,255), mask);
-      drawContours(mask);
-    }
-
-    function drawContours(binMat) {
+    function mergeAndDrawContours(binMat) {
       cv.findContours(binMat, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
+
+      let boundingRects = [];
       for (let i = 0; i < contours.size(); i++) {
         let rect = cv.boundingRect(contours.get(i));
-        cv.rectangle(dst, new cv.Point(rect.x,rect.y), new cv.Point(rect.x+rect.width, rect.y+rect.height), [255,0,0,255], 2);
+        boundingRects.push(rect);
+      }
+
+      let mergedRects = mergeRectangles(boundingRects);
+
+      for (let rect of mergedRects) {
+        cv.rectangle(dst, new cv.Point(rect.x, rect.y), new cv.Point(rect.x + rect.width, rect.y + rect.height), [255, 0, 0, 255], 2);
       }
     }
 
-    trimBtn.addEventListener('click', () => {
-      statusEl.innerText = '✂️ トリミング実行中...';
-      // トリミング処理の実装はここに
-      statusEl.innerText = '✅ トリミング完了';
-    });
+    function mergeRectangles(rects) {
+      let merged = [];
+      while (rects.length > 0) {
+        let rect = rects.pop();
+        let hasMerged = false;
 
-    ocrBtn.addEventListener('click', () => {
-      statusEl.innerText = '🔤 OCR実行中...';
-      // OCR処理の実装はここに
-      statusEl.innerText = '✅ OCR完了';
-    });
+        for (let i = 0; i < merged.length; i++) {
+          if (isOverlapping(rect, merged[i])) {
+            merged[i] = combineRects(rect, merged[i]);
+            hasMerged = true;
+            break;
+          }
+        }
+
+        if (!hasMerged) {
+          merged.push(rect);
+        }
+      }
+      return merged;
+    }
+
+    function isOverlapping(rect1, rect2) {
+      return !(rect1.x + rect1.width < rect2.x || rect2.x + rect2.width < rect1.x ||
+               rect1.y + rect1.height < rect2.y || rect2.y + rect2.height < rect1.y);
+    }
+
+    function combineRects(rect1, rect2) {
+      let x = Math.min(rect1.x, rect2.x);
+      let y = Math.min(rect1.y, rect2.y);
+      let width = Math.max(rect1.x + rect1.width, rect2.x + rect2.width) - x;
+      let height = Math.max(rect1.y + rect1.height, rect2.y + rect2.height) - y;
+      return { x, y, width, height };
+    }
   </script>
 </body>
 </html>
