--- a/card_scan.html
+++ b/card_scan.html
@@ -2,9 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>リアルタイムカード枠検出（改善案切り替え版）</title>
+  <title>リアルタイムカード枠検出（改善案3: 赤枠統合）</title>
   <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady();"></script>
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
   <style>
     video { display: none; }
     canvas { 
@@ -16,29 +15,25 @@
   </style>
 </head>
 <body>
-  <h1>リアルタイムカード枠検出（改善案切り替え版）</h1>
+  <h1>リアルタイムカード枠検出（改善案3: 赤枠統合）</h1>
   <div id="opencv-status" style="font-weight: bold; margin: 1em;"></div>
   <video id="video" autoplay playsinline></video>
   <canvas id="canvasOutput"></canvas>
   <button id="mode1-button">改善案1: 通常検出</button>
   <button id="mode2-button">改善案2: モルフォロジー処理</button>
-  <button id="trim-button">トリミング</button>
-  <button id="ocr-button">OCRを実行</button>
-  <div id="recognized-text">読み取った文字列: <span id="text-output">なし</span></div>
+  <button id="mode3-button">改善案3: 赤枠統合</button>
 
   <script>
     let video = document.getElementById('video');
     let canvas = document.getElementById('canvasOutput');
     let ctx = canvas.getContext('2d');
     let streaming = false;
-    let textOutput = document.getElementById('text-output');
-    let ocrButton = document.getElementById('ocr-button');
-    let trimButton = document.getElementById('trim-button');
     let currentMode = 1; // デフォルトは改善案1
 
     // 各ボタンのクリックイベント
     document.getElementById('mode1-button').addEventListener('click', () => setMode(1));
     document.getElementById('mode2-button').addEventListener('click', () => setMode(2));
+    document.getElementById('mode3-button').addEventListener('click', () => setMode(3));
 
     function setMode(mode) {
       currentMode = mode;
@@ -81,6 +76,8 @@
         detectWithMode1(src);
       } else if (currentMode === 2) {
         detectWithMode2(src);
+      } else if (currentMode === 3) {
+        detectWithMode3(src);
       }
 
       cv.imshow('canvasOutput', src);
@@ -115,6 +112,74 @@
       gray.delete(); blurred.delete(); edges.delete(); kernel.delete();
     }
 
+    function detectWithMode3(src) {
+      // 改善案3: 赤枠の統合
+      let gray = new cv.Mat();
+      let edges = new cv.Mat();
+      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
+      cv.Canny(gray, edges, 50, 150);
+
+      let contours = new cv.MatVector();
+      let hierarchy = new cv.Mat();
+      cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
+
+      let boundingRects = [];
+      for (let i = 0; i < contours.size(); i++) {
+        let rect = cv.boundingRect(contours.get(i));
+        boundingRects.push(rect);
+      }
+
+      let mergedRects = mergeRectangles(boundingRects);
+
+      for (let rect of mergedRects) {
+        cv.rectangle(src, new cv.Point(rect.x, rect.y), new cv.Point(rect.x + rect.width, rect.y + rect.height), [255, 0, 0, 255], 2);
+      }
+
+      contours.delete(); hierarchy.delete(); gray.delete(); edges.delete();
+    }
+
+    function mergeRectangles(rects) {
+      // X軸とY軸がほぼ同じ枠を統合
+      const tolerance = 10; // X軸、Y軸の許容誤差
+      let merged = [];
+
+      while (rects.length > 0) {
+        let rect = rects.pop();
+        let hasMerged = false;
+
+        for (let i = 0; i < merged.length; i++) {
+          if (isSimilar(rect, merged[i], tolerance)) {
+            merged[i] = combineRects(rect, merged[i]);
+            hasMerged = true;
+            break;
+          }
+        }
+
+        if (!hasMerged) {
+          merged.push(rect);
+        }
+      }
+
+      return merged;
+    }
+
+    function isSimilar(rect1, rect2, tolerance) {
+      return (
+        Math.abs(rect1.x - rect2.x) <= tolerance &&
+        Math.abs(rect1.y - rect2.y) <= tolerance &&
+        Math.abs(rect1.width - rect2.width) <= tolerance &&
+        Math.abs(rect1.height - rect2.height) <= tolerance
+      );
+    }
+
+    function combineRects(rect1, rect2) {
+      let x = Math.min(rect1.x, rect2.x);
+      let y = Math.min(rect1.y, rect2.y);
+      let width = Math.max(rect1.x + rect1.width, rect2.x + rect2.width) - x;
+      let height = Math.max(rect1.y + rect1.height, rect2.y + rect2.height) - y;
+      return { x, y, width, height };
+    }
+
     function findAndDrawContours(edges, src) {
       let contours = new cv.MatVector();
       let hierarchy = new cv.Mat();
@@ -128,14 +193,6 @@
 
       contours.delete(); hierarchy.delete();
     }
-
-    trimButton.addEventListener('click', () => {
-      alert("現在の改善案に基づいてトリミングを実行します。");
-    });
-
-    ocrButton.addEventListener('click', () => {
-      alert("現在の改善案に基づいてOCRを実行します。");
-    });
   </script>
 </body>
 </html>
