--- a/card_scan.html
+++ b/card_scan.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>リアルタイムカード枠検出（改善案3: 赤枠統合）</title>
+  <title>リアルタイムカード枠検出（赤線映像表示機能追加）</title>
   <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady();"></script>
   <style>
     video { display: none; }
@@ -15,29 +15,27 @@
   </style>
 </head>
 <body>
-  <h1>リアルタイムカード枠検出（改善案3: 赤枠統合）</h1>
+  <h1>リアルタイムカード枠検出（赤線映像表示機能追加）</h1>
   <div id="opencv-status" style="font-weight: bold; margin: 1em;"></div>
   <video id="video" autoplay playsinline></video>
   <canvas id="canvasOutput"></canvas>
-  <button id="mode1-button">改善案1: 通常検出</button>
-  <button id="mode2-button">改善案2: モルフォロジー処理</button>
-  <button id="mode3-button">改善案3: 赤枠統合</button>
+  <button id="mode1-button">改善案1: 赤枠表示</button>
+  <button id="red-line-button">赤線映像表示</button>
 
   <script>
     let video = document.getElementById('video');
     let canvas = document.getElementById('canvasOutput');
     let ctx = canvas.getContext('2d');
     let streaming = false;
-    let currentMode = 1; // デフォルトは改善案1
+    let currentMode = 1; // デフォルトは赤枠表示モード
 
     // 各ボタンのクリックイベント
-    document.getElementById('mode1-button').addEventListener('click', () => setMode(1));
-    document.getElementById('mode2-button').addEventListener('click', () => setMode(2));
-    document.getElementById('mode3-button').addEventListener('click', () => setMode(3));
+    document.getElementById('mode1-button').addEventListener('click', () => setMode(1)); // 赤枠表示
+    document.getElementById('red-line-button').addEventListener('click', () => setMode(2)); // 赤線映像表示
 
     function setMode(mode) {
       currentMode = mode;
-      console.log(`現在のモード: 改善案${mode}`);
+      console.log(`現在のモード: ${mode === 1 ? "赤枠表示" : "赤線映像表示"}`);
     }
 
     function onOpenCvReady() {
@@ -73,11 +71,9 @@
       let src = cv.imread(canvas);
 
       if (currentMode === 1) {
-        detectWithMode1(src);
+        detectWithRedFrames(src); // 赤枠表示
       } else if (currentMode === 2) {
-        detectWithMode2(src);
-      } else if (currentMode === 3) {
-        detectWithMode3(src);
+        showRedLineImage(src); // 赤線映像表示
       }
 
       cv.imshow('canvasOutput', src);
@@ -85,102 +81,13 @@
       requestAnimationFrame(processVideo);
     }
 
-    function detectWithMode1(src) {
-      // 改善案1: 通常の輪郭検出
-      let gray = new cv.Mat();
-      let edges = new cv.Mat();
-      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
-      cv.Canny(gray, edges, 50, 150);
-      findAndDrawContours(edges, src);
-      gray.delete(); edges.delete();
-    }
-
-    function detectWithMode2(src) {
-      // 改善案2: モルフォロジー処理を追加
-      let gray = new cv.Mat();
-      let blurred = new cv.Mat();
-      let edges = new cv.Mat();
-      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
-      cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
-
-      let kernel = cv.Mat.ones(5, 5, cv.CV_8U);
-      cv.dilate(blurred, blurred, kernel);
-      cv.erode(blurred, blurred, kernel);
-      cv.Canny(blurred, edges, 50, 150);
-
-      findAndDrawContours(edges, src);
-      gray.delete(); blurred.delete(); edges.delete(); kernel.delete();
-    }
-
-    function detectWithMode3(src) {
-      // 改善案3: 赤枠の統合
+    function detectWithRedFrames(src) {
+      // 赤枠を生成して表示
       let gray = new cv.Mat();
       let edges = new cv.Mat();
       cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
       cv.Canny(gray, edges, 50, 150);
 
-      let contours = new cv.MatVector();
-      let hierarchy = new cv.Mat();
-      cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
-
-      let boundingRects = [];
-      for (let i = 0; i < contours.size(); i++) {
-        let rect = cv.boundingRect(contours.get(i));
-        boundingRects.push(rect);
-      }
-
-      let mergedRects = mergeRectangles(boundingRects);
-
-      for (let rect of mergedRects) {
-        cv.rectangle(src, new cv.Point(rect.x, rect.y), new cv.Point(rect.x + rect.width, rect.y + rect.height), [255, 0, 0, 255], 2);
-      }
-
-      contours.delete(); hierarchy.delete(); gray.delete(); edges.delete();
-    }
-
-    function mergeRectangles(rects) {
-      // X軸とY軸がほぼ同じ枠を統合
-      const tolerance = 10; // X軸、Y軸の許容誤差
-      let merged = [];
-
-      while (rects.length > 0) {
-        let rect = rects.pop();
-        let hasMerged = false;
-
-        for (let i = 0; i < merged.length; i++) {
-          if (isSimilar(rect, merged[i], tolerance)) {
-            merged[i] = combineRects(rect, merged[i]);
-            hasMerged = true;
-            break;
-          }
-        }
-
-        if (!hasMerged) {
-          merged.push(rect);
-        }
-      }
-
-      return merged;
-    }
-
-    function isSimilar(rect1, rect2, tolerance) {
-      return (
-        Math.abs(rect1.x - rect2.x) <= tolerance &&
-        Math.abs(rect1.y - rect2.y) <= tolerance &&
-        Math.abs(rect1.width - rect2.width) <= tolerance &&
-        Math.abs(rect1.height - rect2.height) <= tolerance
-      );
-    }
-
-    function combineRects(rect1, rect2) {
-      let x = Math.min(rect1.x, rect2.x);
-      let y = Math.min(rect1.y, rect2.y);
-      let width = Math.max(rect1.x + rect1.width, rect2.x + rect2.width) - x;
-      let height = Math.max(rect1.y + rect1.height, rect2.y + rect2.height) - y;
-      return { x, y, width, height };
-    }
-
-    function findAndDrawContours(edges, src) {
       let contours = new cv.MatVector();
       let hierarchy = new cv.Mat();
       cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
@@ -191,7 +98,20 @@
         cv.rectangle(src, new cv.Point(rect.x, rect.y), new cv.Point(rect.x + rect.width, rect.y + rect.height), [255, 0, 0, 255], 2);
       }
 
-      contours.delete(); hierarchy.delete();
+      contours.delete(); hierarchy.delete(); gray.delete(); edges.delete();
+    }
+
+    function showRedLineImage(src) {
+      // 赤線映像を表示（Cannyエッジ検出の結果）
+      let gray = new cv.Mat();
+      let edges = new cv.Mat();
+      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
+      cv.Canny(gray, edges, 50, 150);
+
+      // エッジ画像をそのまま表示
+      cv.cvtColor(edges, src, cv.COLOR_GRAY2RGBA);
+
+      gray.delete(); edges.delete();
     }
   </script>
 </body>
