--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     h2 {
       text-align: center;
       margin-bottom: 10px;
+      margin-top: 0;
       position: relative;
     }
   
@@ -76,6 +77,7 @@
     .mobile-layout h2 {
       font-size: 16px;
       margin-bottom: 8px;
+      margin-top: 0;
       position: static;
     }
 
@@ -297,7 +299,7 @@
     }
   
     .mobile-layout .container-top {
-      padding: 6px;
+      padding: 4px 6px 6px 6px;
     }
   
     .mobile-layout .top-controls {
